# machine-learning

./: LICENSE
ai-reviewer-ui/: package-lock.json  package.json
backend/: README.md  pyproject.toml
backend/alembic/: env.py
backend/app/: main.py
backend/app/agents/: __init__.py  base.py  critic.py  evaluator.py  graph_state.py  loop_controller.py  proposer.py  review_graph.py
backend/app/agents/prompts/: __init__.py  critic_prompts.py  evaluator_prompts.py  proposer_prompts.py
backend/app/analysis/: analyzers.py
backend/app/api/: deps.py  router.py
backend/app/api/v1/: auth.py  github.py  memory.py  patches.py  reviews.py  ws.py
backend/app/core/: config.py  exceptions.py  logging.py  middleware.py  security.py  websocket_manager.py
backend/app/db/: base.py  session.py
backend/app/db/repositories/: __init__.py  agent_log_repo.py  iteration_repo.py  patch_repo.py  review_repo.py  user_repo.py
backend/app/llm/: anthropic_provider.py  deepseek_provider.py  gemini_provider.py  ollama_provider.py  openai_provider.py  provider.py  token_tracker.py
backend/app/memory/: chroma_client.py  embeddings.py  retriever.py
backend/app/models/: __init__.py  agent_log.py  patch.py  review.py  review_iteration.py  user.py
backend/app/sandbox/: executor.py
backend/app/schemas/: __init__.py  agent.py  auth.py  patch.py  review.py
backend/app/services/: auth_service.py  github_service.py  review_service.py
backend/app/workers/: celery_app.py  tasks.py
backend/requirements/: base.txt  dev.txt  prod.txt
backend/tests/: conftest.py  test_api.py
(+21 files in other folders)
